# remnawave-admin

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  WEBHOOK_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260518_0068_add_online_users_snapshots.py  20260527_0069_partition_user_connections.py  20260531_0070_add_user_created_by_admin_and_unlimited_traffic_policy.py  20260607_0071_add_has_bot_access_to_admin_accounts.py  20260705_0072_add_violations_pending_index.py  20260717_0073_add_finance_module.py  20260717_0074_add_finance_provider_accounts.py  20260718_0075_add_finance_provider_archived.py  20260718_0076_add_nodes_agent_ip.py  20260718_0077_add_config_versions.py  20260718_0078_add_user_presets.py  20260719_0079_add_node_bscheck.py  20260719_0080_bscheck_history.py  20260719_0081_bscheck_jobs.py  20260720_0082_webauthn_credentials.py  20260720_0083_oauth_links.py  20260720_0084_admin_sessions.py  (+6 more)
docs/: README.md  WEBHOOKS-EVENTS.md
monitoring/: alertmanager.yml.example  entrypoint.sh  prometheus.yml.tmpl
node-agent/: docker-compose.yml
scripts/: admin_cli.py
shared/: __init__.py  admin_quota.py  agent_tokens.py  agent_version.py  api_client.py  bedolaga_client.py  cache.py  config_service.py  data_access.py  database.py  db_query.py  db_schema.py  deeplinks.py  exceptions.py  geoip.py  http_client.py  internal_api.py  logger.py  metrics.py  push_service.py  rbac.py  sync.py  tg_rich.py  violation_detector.py  violation_reports.py
signatures/: cla.json
src/: config.py  main.py
(+518 files in other folders)
