[project]
name = "remnawave-admin"
version = "3.1.1"
description = "Telegram administration bot and web panel for Remnawave"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram==3.12.0",
    "aiohttp>=3.9.0",
    "aiosmtpd>=1.4.4",
    "aiosmtplib>=3.0.0",
    "alembic==1.14.0",
    "asyncpg==0.29.0",
    "bcrypt==4.2.1",
    "cryptography>=42.0",
    "dkimpy>=1.1.0",
    "dnspython>=2.6.0",
    "fastapi==0.115.0",
    "firebase-admin>=6.5.0",
    "geoip2>=4.8.0",
    "httpx==0.27.2",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.20.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "pyotp>=2.9.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "qrcode[pil]>=7.4",
    "redis[hiredis]>=5.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.36",
    "structlog>=24.1.0",
    "ujson==5.10.0",
    "uvicorn[standard]==0.32.0",
    "webauthn>=3.0.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["src/tests", "web/backend/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
